--- a/.env.example
+++ b/.env.example
@@ -84,3 +84,11 @@ REDSHIFT_HOST=your_host
 REDSHIFT_USERNAME=your_username
 REDSHIFT_PASSWORD=your_password
 REDSHIFT_PORT=5439
+
+# Growthbook
+GB_API_HOST=
+GB_CLIENT_KEY=
+GB_TOKEN=
+
+# Gemini
+GEMINI_API_KEY=
