🔧 feat(agent/tools): add GitHubReviewTool for automated PR review requests
- New tool 'github_review' registered in ToolRegistry
- Detects GitHub PR links from conversation context
- Posts '@gemini-cli /review' comment on each detected PR
- Handles multiple PRs in a single message with deduplication
- Graceful error handling for 401/403/404 permission issues
- Configurable comment content via tool parameters
- New lib/github/github-api.ts for GitHub API interaction
- Added GITHUB_PAT to .env.example

--- a/.env.example
+++ b/.env.example
@@ -94,3 +94,6 @@ GEMINI_API_KEY=
 
 # MCP Configuration
 MCP_ENCRYPTION_KEY=your_32_byte_encryption_key_here
+
+# GitHub Integration
+GITHUB_PAT=your_github_personal_access_token
